--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             <div class="group">
               <div class="gui__led"></div>
               <div class="gui__btn gui__btn--strict"></div>
-              <p class="gui__label"></p>
+              <p class="gui__label">strict</p>
             </div>
             <div class="group group-large">
               <p class="gui__label gui__label--switch">ON</p>
-              <div class="gui__btn--switch"></div>
+              <div class="gui__btn-switch"></div>
               <p class="gui__label gui__label--switch">OFF</p>
             </div>
           </div>
